--- a/timeline.html
+++ b/timeline.html
@@ -32,21 +32,29 @@
             <div id="text">
                 <div id="code">
                     <!-- 4. CHỈNH SỬA LỜI CHÚC CỦA BẠN TẠI ĐÂY-->
-                    <font color="#3500ff"><span class="say">Chúc mừng sinh nhật người con gái anh yêu</span><br>
-                        <span class="say">Em có nhớ chúng ta yêu nhau được bao nhiêu ngày không ?</span><br>
-                        <span class="say">Anh thì nhớ rất rõ đấy.</span><br>
+                    <font color="#3500ff"><span class="say">Nhân dịp ra đời lần thứ 21 của géi</span><br>
+                        <span class="say">Mình xin chúc gơ luôn cười ha hả từ sáng đến chiều</span><br>
+                        <span class="say">Tủi mới bớt nhậu nhiều, ăn nhiều chút cho béo</span><br>
+                        <span class="say">Chúc bạn iu mãi hạnh phúc bên mình :333 </span><br>
+                        <span class="say">Thật tuyệt khi được gặp bạn trong cuộc sống bộn bề âu lo nì</span><br>
                         <span class="say"> </span><br>
-                        <span class="say">Người ta nói bệnh nào cũng có thuốc chữa</span><br>
-                        <span class="say">Anh đã không tin điều đó nữa đến khi anh gặp em</span><br>
-                        <span class="say">Anh đã phát hiện ra anh đã mang một căn bệnh mà có lẽ,</span><br>
-                        <span class="say">Có lẽ sẽ không bao giờ có thuốc điều trị</span><br>
-                        <span class="say">Đó là căn bệnh hạnh phúc nhất mà anh mai mắn được mắc phải</span><br>
-                        <span class="say">Đó là bệnh yêu em quá nhiều</span><br>
-                        <span class="say">Yêu em cho đến khi nào anh không còn tồn tại </span><br>
-                        <span class="say">Hãy cứ tin em nhé.</span><br>
-                        <span class="say">Chúc em sinh nhật vui vẽ.</span><br>
+
+                        <span class="say">Hãy sống mỗi ngày trong năm mới với nhiều niềm vui và thành công, và hãy nhớ
+                            rằng tôi luôn ở bên cạnh để ủng hộ bạn.</span><br>
+                        <span class="say">Hãy mỉm cười, vui vẻ và thực hiện những ước mơ của mình. Tôi tin bạn có thể
+                            làm được!</span><br>
+                        <span class="say">Hãy tự hào vì những gì bạn đã đạt được trong quãng đường sống của mình. Sinh
+                            nhật vui vẻ và hãy tiếp tục bước đi mạnh mẽ trên con đường thành công.</span><br>
+
+                        <span class="say">Don't count the candles, but see the light they give. Don't count your years
+                            but the life you live. Happy birthday.</span><br>
+                        <span class="say">Wishing you luck to last the whole year through. 🍀🍀🍀</span><br>
+                        <span class="say">Wish our friendship will be as round as this Earth ❤</span><br>
                         <span class="say"> </span><br>
-                        <span class="say"><span class="space"></span> -- Anh yêu Em --</span>
+
+                        <span class="say">สุขสันต์วันเกิดที่สุดพิเศษสำหรับเพื่อนสนิทของฉัน!</span><br>
+                        <span class="say"> </span><br>
+                        <span class="say"><span class="space"></span> -- from: Xuân Mei --</span>
                     </font>
                     </p>
                 </div>
