--- a/timeline.html
+++ b/timeline.html
@@ -71,7 +71,7 @@
 
     <!-- Phần nhạc -->
     <audio id="player" autoplay loop>
-        <source src="./music/music.mp3" type="audio/mp3" />
+        <source src="./music/iloveyou1000.mp3" type="audio/mp3" />
     </audio>
     <script>
         (function () {
