--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <!-- 3. Phần nhạc -->
     <audio id="player" autoplay loop>
-        <source src="./music/music.mp3" type="audio/mp3" />
+        <source src="./music/iloveyou1000.mp3" type="audio/mp3" />
     </audio>
 </body>
 
