--- a/gallery.html
+++ b/gallery.html
@@ -99,7 +99,7 @@
     </div>
     <!-- Phần nhạc -->
     <audio id="player" autoplay loop>
-        <source src="./music/iloveyou1000.mp3" type="audio/mp3" />
+        <source src="./music/Hermionong.mp3" type="audio/mp3" />
     </audio>
 </body>
 
